--- a/README.asciidoc
+++ b/README.asciidoc
@@ -2,3 +2,7 @@
 
 Encoder and decoder implementations for the Concise Binary Object
 Representation (CBOR, https://tools.ietf.org/html/rfc7049[RFC 7049]).
+
+== Documentation
+
+API documentation is available at https://twittner.gitlab.io/cbor-codec/cbor/
