Add `Other` constructor to `{En,De}codeError`.
Change `DecodeError::DuplicateKey` to hold a `Key` instead of a boxed
`Debug` value.

Replace serde and serde-json test dependencies with json-codec.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,9 @@
+0.6.0
+-----
+- Add `Other` constructor to `EncodeError` end `DecodeError`.
+- Change `DecodeError::DuplicateKey` to contain the key value.
+- Update tests.
+
 0.5.0
 -----
 - Update `byteorder` dependency.
