--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+0.7.0
+-----
+- Add `Decoder::read_bytes`.
+- Minor internal improvements.
+
 0.6.0
 -----
 - Add `Other` constructor to `EncodeError` end `DecodeError`.
